--- a/src/assets/timeout/nick/config.yml
+++ b/src/assets/timeout/nick/config.yml
@@ -5,3 +5,14 @@ nickprefix: '&7'
 
 # Language of system:
 language: 'de_DE'
+
+#MySQL enabled
+mysql: true
+
+#Settings for MySQL
+mysql:
+  host: 'localhost'
+  port: 3306
+  database: 'NickSystem'
+  username: 'username'
+  password: 'password'
